removed polygon, added webkit to resolve card issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ body {
   background: url("../img/nav-background.jpg") no-repeat center;
   background-size: cover;
   background-attachment: fixed;
-  clip-path: polygon(0 0, 100% 0, 100% 95%, 0% 100%); }
+  margin-bottom: 1rem; }
   @media only screen and (max-width: 1280px) {
     .intro {
       height: 120vh; } }
@@ -200,11 +200,11 @@ body {
   color: #ffffff;
   background: linear-gradient(to right bottom, #0a111b, #0e0d0d);
   padding: 15rem 0 50rem 0;
-  clip-path: polygon(0 5%, 100% 0, 100% 95%, 0 100%); }
+  margin-bottom: 1rem; }
   @media only screen and (max-width: 1280px) {
     .about {
       height: auto;
-      padding: 15rem 0 15rem 0; } }
+      padding: 15rem 5rem; } }
   .about__row {
     display: flex;
     flex-direction: row;
@@ -241,7 +241,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-position: top;
-  clip-path: polygon(0 5%, 100% 0, 100% 100%, 0 100%); }
+  margin-bottom: 1rem; }
   @media only screen and (max-width: 1280px) {
     .projects {
       height: auto;
@@ -263,7 +263,8 @@ body {
   position: relative;
   min-width: 25rem;
   min-height: 80rem;
-  perspective: 150rem; }
+  perspective: 150rem;
+  -webkit-backface-visibility: hidden; }
   @media screen and (max-width: 1024px) {
     .project__card {
       width: 100%; } }
