--- a/sass/main.scss
+++ b/sass/main.scss
@@ -213,7 +213,8 @@ body {
   background: url("../img/nav-background.jpg") no-repeat center;
   background-size: cover;
   background-attachment: fixed;
-  clip-path: polygon(0 0, 100% 0, 100% 95%, 0% 100%);
+  margin-bottom: 1rem;
+  // clip-path: polygon(0 0, 100% 0, 100% 95%, 0% 100%);
 
   @media only screen and (max-width: 1280px){
     height: 120vh;
@@ -293,6 +294,8 @@ body {
 .next-page {
   text-align: center;
 }
+
+
 // section 2 ABOUT
 
 .about {
@@ -302,12 +305,13 @@ body {
   color: $font-primary;
   background: $dark-background;
   padding: 15rem 0 50rem 0;
+  margin-bottom: 1rem;
 
-  clip-path: polygon(0 5%, 100% 0, 100% 95%, 0 100%);
+  // clip-path: polygon(0 5%, 100% 0, 100% 95%, 0 100%);
 
   @media only screen and (max-width: 1280px){
     height: auto;
-    padding: 15rem 0 15rem 0;
+    padding: 15rem 5rem;
   }
 
   &__row {
@@ -354,7 +358,8 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-position: top;
-  clip-path: polygon(0 5%, 100% 0, 100% 100%, 0 100%);
+  margin-bottom: 1rem;
+  // clip-path: polygon(0 5%, 100% 0, 100% 95%, 0 100%);
 
   @media only screen and (max-width: 1280px){
     height: auto;
@@ -385,6 +390,7 @@ body {
   min-width: 25rem;
   min-height: 80rem;
   perspective: 150rem;
+  -webkit-backface-visibility: hidden;
 
   @media screen and (max-width: 1024px) {
     width: 100%;
